media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr@sha256:f98f655d5d26941f19f363a0193477f2e69ed25e4c997009ee9e0de8a678f4ec
          ports:
            - name: http
              containerPort: 7878
          volumeMounts:
            - name: media
              mountPath: /config
              subPath: radarr
            - name: media
              mountPath: /data
              subPath: library
      volumes:
        - name: media
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/media
