media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
